@@ -1,0 +1,19 @@
+extends layout
+
+block content
+  .col-md-12.col-xs-12
+    .panel.panel-default
+      .panel-heading
+        strong Changelog
+      .panel-body
+        :markdown
+
+          ------
+          #### v1.6.2
+          * added historical global network hash chart
+          * added historical global difficulty chart
+          * made chart(s) resizable
+          * explorer version now visible in lower right corner
+          * added numeral formatting to coin supply
+          * added historical block find time chart
+          * fixed tooltip coloring issue
