@@ -15,6 +15,7 @@ html
     script(src='/vendor/jqplot/plugins/jqplot.highlighter.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.pieRenderer.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.barRenderer.min.js')
+    script(src='/vendor/jqplot/plugins/jqplot.trendline.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.categoryAxisRenderer.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.canvasAxisLabelRenderer.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.canvasTextRenderer.min.js')
@@ -24,6 +25,8 @@ html
     script(src='/javascripts/mapdata.js')
     script(src='/javascripts/hashdata.js')
     script(src='/javascripts/diffdata.js')
+    script(src='/javascripts/timedata.js')
+    script(src='/javascripts/array.js')
     script(src='//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js')  
     script(src='//cdn.datatables.net/responsive/1.0.1/js/dataTables.responsive.js')
     script(src='//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js')
